# husk

./: .gitignore  .treefmt.toml  LICENSE  README.md  fourmolu.yaml  husk.cabal
app/: Main.hs
src/: Ast.hs  AstToGraph.hs  Combined.hs  Graph.hs  Lexer.hs  Parser.hs  ParserLib.hs  ReductionMachine.hs  Token.hs
test/: LexerSpec.hs  MainSpec.hs  ParserSpec.hs
test/res/: few-fun.hu  fib-iter.hu  let-and-fun.hu  one-fun.hu
test/res/def/: fib.hu  is-prime.hu  letin-and-fun.hu  list-len.hu  merge.hu  mergesort.hu  odd-even.hu
