cabal-version: 3.0
name:          husk
synopsis:
    Lazy functional programming language based on evaluating lambda terms with SK reduction machine

version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Leonid Dorochko
maintainer:    mrbelarusman@gmail.com
category:      Language
build-type:    Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-- extra-doc-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:
        Ast
        AstToGraph
        Combined
        Graph
        Lexer
        Parser
        ParserLib
        ReductionMachine
        Token

    build-depends:
        , base        >=4 && <5
        , containers
        , mtl

    default-language: Haskell2010

executable huskc
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        , base  >=4 && <5
        , husk

    default-language: Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:
        , base   >=4 && <5
        , hspec  >=2 && <3
        , husk

    other-modules:
        LexerSpec
        MainSpec
        ParserSpec

    build-tool-depends: hspec-discover:hspec-discover >=2 && <3
    default-language:   Haskell2010
